<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@color/orange" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:typeface="serif" android:textStyle="bold" android:textColor="@color/red" android:id="@id/noimage" android:visibility="invisible" android:layout_width="295.0dip" android:layout_height="19.0dip" android:layout_marginBottom="13.0dip" android:text="@string/noimage" android:fontFamily="@font/opensans" android:textAlignment="center" app:layout_constraintBottom_toTopOf="@id/uploadBtn" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageView" />
    <Button android:id="@id/amiallergic" android:layout_width="320.0dip" android:layout_height="58.0dip" android:layout_marginTop="8.0dip" android:text="@string/amiallergic" android:drawableEnd="@drawable/next_arrow" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" android:backgroundTint="@color/lightPurple" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/uploadBtn" />
    <Button android:id="@id/uploadBtn" android:layout_width="160.0dip" android:layout_height="58.0dip" android:layout_marginBottom="80.0dip" android:text="@string/upload" android:drawableEnd="@drawable/upload" android:layout_marginStart="24.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/another" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" />
    <Button android:id="@id/another" android:layout_width="160.0dip" android:layout_height="58.0dip" android:layout_marginBottom="80.0dip" android:text="@string/resnap" android:drawableEnd="@drawable/reload" android:layout_marginStart="8.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/uploadBtn" />
    <ImageView android:id="@id/imageView" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="28.0dip" android:layout_marginBottom="35.0dip" android:src="@drawable/ic_dashboard_black_24dp" android:contentDescription="@string/next" android:layout_marginStart="60.0dip" android:layout_marginEnd="60.0dip" app:layout_constraintBottom_toTopOf="@id/another" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>