<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@id/container" android:background="@color/orange" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="18.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/black" android:id="@id/app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:layout_marginBottom="24.0dip" android:text="@string/app_spaced_name" android:layout_alignParentTop="true" android:textAllCaps="true" android:fontFamily="@font/opensans" android:layout_alignParentStart="true" app:layout_constraintBottom_toTopOf="@id/app_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="13.0sp" android:typeface="serif" android:textColor="@color/black" android:id="@id/app_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="19.0dip" android:text="@string/app_description" android:layout_alignParentTop="true" android:fontFamily="@font/opensans" android:textAlignment="center" android:layout_marginStart="41.0dip" android:layout_marginEnd="41.0dip" android:layout_alignParentStart="true" app:layout_constraintBottom_toTopOf="@id/view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_name" />
    <View android:id="@id/view" android:background="@color/black" android:layout_width="250.0dip" android:layout_height="1.0dip" android:layout_marginBottom="40.0dip" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" app:layout_constraintBottom_toTopOf="@id/pick" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_description" />
    <TextView android:textSize="11.0sp" android:typeface="serif" android:textStyle="bold" android:textColor="@color/red" android:id="@id/atleast1" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/atleast1" android:fontFamily="@font/opensans" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/spinnerMulti" />
    <TextView android:textSize="20.0sp" android:typeface="serif" android:textColor="@color/black" android:id="@id/pick" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:text="@string/pick" android:layout_alignParentTop="true" android:fontFamily="@font/opensans" android:textAlignment="center" android:layout_alignParentStart="true" app:layout_constraintBottom_toTopOf="@id/spinnerMulti" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view" />
    <com.anupya.anupya_pamidimukkala.picmyallergy.MultiSpinner android:textColor="@color/white" android:id="@id/spinnerMulti" android:background="@drawable/border" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginBottom="129.0dip" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" app:layout_constraintBottom_toTopOf="@id/btnNextScreen" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pick" />
    <Button android:textSize="17.0sp" android:id="@id/btnNextScreen" android:layout_width="235.0dip" android:layout_height="56.0dip" android:layout_marginBottom="92.0dip" android:text="@string/app_name" android:drawableEnd="@drawable/next_arrow" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <ImageView android:id="@id/imageView" android:layout_width="75.0dip" android:layout_height="27.0dip" android:layout_marginTop="14.0dip" android:layout_marginBottom="20.0dip" android:src="@drawable/clarifai" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.624" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnNextScreen" app:layout_constraintVertical_bias="0.696" />
    <TextView android:textSize="14.0sp" android:typeface="serif" android:textColor="@color/black" android:id="@id/made" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="6.0dip" android:text="@string/made" android:layout_alignParentTop="true" android:fontFamily="@font/opensans" android:textAlignment="center" android:layout_marginEnd="8.0dip" android:layout_alignParentStart="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintEnd_toStartOf="@id/imageView" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnNextScreen" app:layout_constraintVertical_bias="0.437" />
</android.support.constraint.ConstraintLayout>