<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@color/orange" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0sp" android:typeface="serif" android:textColor="@color/black" android:id="@id/pick" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:text="@string/results" android:layout_alignParentTop="true" android:fontFamily="@font/opensans" android:textAlignment="center" android:layout_alignParentStart="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.503" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:scrollbarThumbVertical="@drawable/thumbvertical" android:scrollbarAlwaysDrawVerticalTrack="true" android:textSize="14.0sp" android:typeface="serif" android:textColor="@color/black" android:gravity="start" android:id="@id/results" android:padding="8.0sp" android:scrollbars="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:maxLines="4" android:layout_alignParentTop="true" android:overScrollMode="ifContentScrolls" android:fontFamily="@font/opensans" android:textAlignment="center" android:layout_marginStart="60.0dip" android:layout_marginEnd="60.0dip" android:layout_alignParentStart="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageView" />
    <ImageView android:id="@id/imageView" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="80.0dip" android:layout_marginBottom="200.0dip" android:src="@drawable/ic_dashboard_black_24dp" android:contentDescription="@string/next" android:layout_marginStart="60.0dip" android:layout_marginEnd="60.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <Button android:id="@id/another" android:layout_width="160.0dip" android:layout_height="58.0dip" android:layout_marginBottom="16.0dip" android:text="@string/resnap" android:drawableEnd="@drawable/reload" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/allergies" />
    <Button android:id="@id/allergies" android:layout_width="160.0dip" android:layout_height="58.0dip" android:layout_marginBottom="16.0dip" android:text="@string/edit" android:drawableStart="@drawable/back_arrow" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/another" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" />
    <android.support.constraint.Guideline android:orientation="vertical" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="362.0dip" />
    <android.support.constraint.Guideline android:orientation="vertical" android:id="@id/guideline2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="-6.0dip" />
</android.support.constraint.ConstraintLayout>